- Fixed the jumping problem on node drag by implementing an own drag method. - Due to the previous : Used that opportunity to introduce sticky nodes in the network. They are created by dragging and can be released with a click. - Isssues : Nodes sometimes seem to Avoid the cursor (Jumping between fixed and moving if they are only hit at the border). Further the panning still does not work propperly. The Detail flickers during movement. Either turn it of or prevent if from beeing hidden and shown all the time. - TODOs : Add some single author detail view if possible and fix the above ;)

--- a/style.css
+++ b/style.css
@@ -46,8 +46,12 @@ svg {
     stroke : #000;
 }
 
+.node.permanentFixed {
+
+}
+
 .link {
-    stroke: #999;
+    stroke: #777;
 }
 
 #tooltip {
